--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "angular-app",
   "dependencies": {
-    "angular": "^1.7.2"
+    "angular": "^1.7.2",
+    "angular-route": "^1.7.2"
   }
 }
